# Sahayak-v3

./: README.md  launch_all.launch  requirement.txt  ros_requirements.txt
mapping_pkg/: CMakeLists.txt  package.xml
mapping_pkg/src/: odom-pub.py
sahayak/: CMakeLists.txt  package.xml
sahayak/config/: joint_names_sahayak.yaml
sahayak/launch/: display.launch  gazebo.launch  launch_all.launch  path_planning_display.launch
sahayak/meshes/: Camera.STL  Lidar.STL  Wheel_left_back.STL  Wheel_left_front.STL  Wheel_right_back.STL  Wheel_right_front.STL  base_link.STL
sahayak/models/: model.config
sahayak/urdf/: sahayak.csv  sahayak.urdf
sahayak/world/: cafe.world  my_world.world
sahayak_control/: CMakeLists.txt  package.xml
sahayak_control/config/: sahayak_control.yaml
sahayak_control/launch/: sahayak_control.launch  teleop.launch
sahayak_control/src/: vel_control.py  vel_control_slow.py
sahayak_mapping/: CMakeLists.txt  package.xml
sahayak_mapping/rviz/: hector_map.rviz  mapping.rviz
sahayak_mapping/src/: odom-pub.py
sahayak_navigation/: CMakeLists.txt  package.xml
sahayak_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
sahayak_navigation/launch/: amcl-localisation.launch  sahayak_navigation.launch  scan_matcher.launch
sahayak_navigation/rviz/: path_planning.rviz
sahayak_navigation/src/: navigator.py  scan_matcher_topic.py
visual_odom/: CMakeLists.txt  README.md  package.xml
visual_odom/config/: ekf_template.yaml
(+31 files in other folders)
